--- a/app/Pipfile
+++ b/app/Pipfile
@@ -5,8 +5,10 @@ name = "pypi"
 
 [packages]
 django = "==4.0.2"
+dj-database-url = "==0.5.0"
+psycopg2 = "==2.9.3"
 
 [dev-packages]
 
 [requires]
-python_version = "3.9"
+python_version = "3.10"
