added custom models for superuser and user

--- a/app/env/.env
+++ b/app/env/.env
@@ -5,7 +5,7 @@ DATABASE_URL=postgres://postgres:password@postgres:5432/postgres
 
 DEBUG=1
 SECRET_KEY=django-insecure-ye9^i&m__*92n$veag$^jn3kkh9$3dh=ml_x9ab^-%#(p_vl2#
-DJANGO_ALLOWED_HOSTS='django'
+DJANGO_ALLOWED_HOSTS='django localhost 127.0.0.1'
 
 DJANGO_SU_NAME=testAdmin
 DJANGO_SU_EMAIL=teastAdmin@aa.pl
